# Otter

./: .env  .env.example  .gitignore  CITATION.cff  README.md  pyproject.toml
docs/: README_zh.md
docs/en/: env_config.md
docs/zh/: README.md  dev_guide.md  env_config.md
envs/: .env.sweci
src/code_eval/: logger.py  pipeline.py  pipline.py
src/code_eval/config/: setting.py
src/code_eval/datasets/: __init__.py  apps.py  base.py  hf_apps.py  humaneval.py  mbppplus.py
src/code_eval/llm/: __init__.py  base.py  openai_compatible.py
src/docker_cli/: __init__.py  base.py
src/docker_cli/claude/: Dockerfile.claude  claude.py
src/docker_cli/codex/: Dockerfile.codex  codex.py
src/docker_cli/miniswe/: Dockerfile.mini_swe  Dockerfile.miniswe  miniswe.py
src/docker_cli/opencode/: Dockerfile.opencode  opencode.py
src/docker_cli/openhands/: Dockerfile.openhands  openhands.py
src/otter/: cli.py  episode.py  logger.py  manifest.py  pipeline.py  role.py  store.py  summary.py
src/otter/analysis/: __init__.py  trend.py
src/otter/backend/: __init__.py  agent_docker.py  base.py  chat_llm.py  docker.py
tests/: conftest.py  test_cli.py  test_config_backend_settings.py  test_config_utils.py  test_episode.py  test_logger.py  test_pipeline.py  test_role.py  test_summary.py
tests/analysis/: test_trend.py
tests/backend/: test_chat_llm.py  test_docker.py  test_init.py
tests/config/: test_backend_settings.py  test_dataset_settings.py  test_setting.py  test_utils.py
tests/dataset/: test_base.py  test_evalplus.py  test_mbppplus.py  test_utils.py
(+43 files in other folders)
