[project]
name = "otter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "datasets==4.6.1",
    "pydantic-settings==2.13.1",
    "openai==2.26.0",
    "typer>=0.15.0",
    "docker>=7.1.0",
    "rich>=14.3.1",
]

[project.optional-dependencies]
dev = [
    "freezegun==1.5.5",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-json-report==1.5.0",
    "pytest-metadata==3.1.1",
    "pytest-mock==3.15.1",
    "responses==0.26.0",
    "respx==0.22.0",
]

[project.scripts]
otter = "otter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = """
    --cov=src
    --cov-report=term-missing
    --continue-on-collection-errors
    --tb=long
"""
